<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="FromOperationControlToMainControl" Id="{dbe6afd4-ad42-468d-9e5d-fd1df17f9ed1}">
    <Declaration><![CDATA[TYPE FromOperationControlToMainControl :
STRUCT
	//Main Controller
	OM_origO_StartOperational                   : BIT	;
	OM_origO_StopOperational					: BIT	;
	OM_origO_EndShutdown						: BIT	;
	OM_origO_GoToError                          : BIT	;
	OM_origO_AckError							: BIT	;
	OM_origG_ServiceModuleDisable				: BIT	;
	OM_origG_LevitationDisable                  : BIT	;
	OM_origG_GuidanceDisable                    : BIT	;
	OM_origO_SafetyCounter                      : UDINT	;
	OM_origG_LoggingCounterOut					: USINT	;
	
	//Levitation
	OM_origG_LevControlOption					: USINT	;
	OM_origG_DesiredLevDistance					: REAL	;
	OM_origG_DesiredLevVelocity					: REAL	;
	OM_origG_DesiredLevAcceleration		 		: REAL	;
	OM_origG_DesiredLevTime						: REAL	;
	
	//Guidance
	OM_origG_EnableGuidController				: BIT	;
	OM_origG_GuidReferenceYSignal		 		: REAL 	;
	OM_origG_GuidControlOption					: USINT ;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>