<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="eServiceModuleSTM" Id="{2a699666-39b1-4315-8ecf-19f90afb5acd}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE eServiceModuleSTM :
(
	Waiting,
	Running,
	PostRunning,
	PreparingForError
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>