<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="MainControl" Id="{165fa4b6-fe79-4748-9022-b33b5b722466}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MainControl
VAR
	fbErrorHandling : FB_ErrorHandling;
	fbServiceModule : FB_ServiceModule;
	fbLevitationSystem : FB_LevitationSystem;
	fbGuidanceSystem : FB_GuidanceSystem;
	
	stFromOperationControlToMainControl : FromOperationControlToMainControl;
	stFromMainControlToOperationControl : FromMainControlToOperationControl;
	
	eMainState : eMainStateMachine := eMainStateMachine.STARTUP;
	
	fbErrorTimer : TON := (PT := T#10S);
	bStartUpError : BOOL;
	bGoToError : BOOL;
	
	bOnGround : BOOL;

	
	nMode : BYTE := 0;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbErrorHandling();

CASE eMainState OF
	//
	eMainStateMachine.STARTUP:
		doEnableSubsystems();
		doCallSubsystems();
		doCheckSystem();
	//
	eMainStateMachine.READY:
		doCallSubsystems();
		doActivateHighLevelSTM();
		
		IF fbErrorHandling.getGoToERROR THEN
			fbServiceModule.eState := eServiceModuleSTM.PreparingForError;
		ELSE
			fbServiceModule.eState := eServiceModuleSTM.Waiting;
		END_IF

	
		IF fbErrorHandling.getGoToERROR THEN
			eMainState := eMainStateMachine.ERROR;
		ELSIF stFromOperationControlToMainControl.OM_origO_StartOperational THEN
			eMainState := eMainStateMachine.OPERATIONAL;
		END_IF

	//
	eMainStateMachine.OPERATIONAL:
		doCallSubsystems();
		
		fbServiceModule.eState := eServiceModuleSTM.Running;
		
		
		IF fbErrorHandling.getGoToSHUTDOWN OR stFromOperationControlToMainControl.OM_origO_StopOperational THEN
			eMainState := eMainStateMachine.SHUTDOWN;
		ELSE
			eMainState := eMainStateMachine.OPERATIONAL;
		END_IF
	//
	eMainStatemachine.SHUTDOWN:
		doCallSubsystems();
		
		IF fbErrorHandling.getGoToSHUTDOWN THEN
			fbServiceModule.eState := eServiceModuleSTM.PreparingForError;
		ELSE
			fbServiceModule.eState := eServiceModuleSTM.PostRunning;
		END_IF
		
		
		
		IF bOnGround THEN
			IF fbErrorHandling.getGoToSHUTDOWN THEN
				eMainState := eMainStateMachine.ERROR;
			ELSE
				eMainState := eMainStateMachine.READY;
			END_IF
		END_IF
	//	
	eMainStateMachine.ERROR:
		
		IF stFromOperationControlToMainControl.OM_origO_AckError THEN
			eMainState := eMainStateMachine.STARTUP;
		END_IF

END_CASE]]></ST>
    </Implementation>
    <Method Name="doActivateHighLevelSTM" Id="{47446e0a-b75b-4c67-8d8c-35029d1ee551}">
      <Declaration><![CDATA[METHOD PRIVATE doActivateHighLevelSTM
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[CASE nMode OF
	0:	fbServiceModule.bSTMActive := TRUE;
		fbLevitationSystem.setActive := TRUE;
		fbGuidanceSystem.setActive := TRUE;
	
	1:	fbLevitationSystem.setActive := TRUE;
		fbGuidanceSystem.setActive := TRUE;
	
	2:	fbServiceModule.bSTMActive := TRUE;
		fbGuidanceSystem.setActive := TRUE;
	
	4:	fbServiceModule.bSTMActive := TRUE;
		fbLevitationSystem.setActive := TRUE;
	
	3:	fbGuidanceSystem.setActive := TRUE;
	
	5:	fbLevitationSystem.setActive := TRUE;
	
	6:	fbServiceModule.bSTMActive := TRUE;
END_CASE]]></ST>
      </Implementation>
    </Method>
    <Method Name="doCallSubsystems" Id="{c330acab-a3df-4219-8ed4-48f648a160a3}">
      <Declaration><![CDATA[METHOD doCallSubsystems
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[CASE nMode OF
	0:
		fbServiceModule();
		fbLevitationSystem();
		fbGuidanceSystem();
	1:
		fbLevitationSystem();
		fbGuidanceSystem();
	2:
		fbServiceModule();
		fbGuidanceSystem();
	4:
		fbServiceModule();
		fbLevitationSystem();
	3:
		fbGuidanceSystem();
	5:
		fbLevitationSystem();
	6:
		fbServiceModule();
END_CASE]]></ST>
      </Implementation>
    </Method>
    <Method Name="doCheckSystem" Id="{55b5a3ff-6d8a-4578-a9a0-1bbfe6d7f606}">
      <Declaration><![CDATA[METHOD doCheckSystem
VAR_INPUT
END_VAR
VAR	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[CASE nMode OF
	0:	//All Enabled
		IF fbServiceModule.eCondition = eConditionCheck.RUN AND fbLevitationSystem.eCondition = eConditionCheck.RUN AND fbGuidanceSystem.eCondition = eConditionCheck.RUN THEN
			fbErrorTimer(IN := FALSE);
			eMainState := eMainStateMachine.READY;
		ELSE
			fbErrorTimer(IN := TRUE);
			IF fbErrorTimer.Q THEN
				bStartUpError := TRUE;
				fbErrorTimer(IN := FALSE);
				eMainState := eMainStateMachine.ERROR;
			ELSE
				eMainState := eMainStateMachine.STARTUP;
			END_IF
		END_IF
		
	1:	//ServiceModule Disabled
		IF fbLevitationSystem.eCondition = eConditionCheck.RUN AND fbGuidanceSystem.eCondition = eConditionCheck.RUN THEN
			fbErrorTimer(IN := FALSE);
			
			eMainState := eMainStateMachine.READY;
		ELSE
			fbErrorTimer(IN := TRUE);
			IF fbErrorTimer.Q THEN
				bStartUpError := TRUE;
				fbErrorTimer(IN := FALSE);
				eMainState := eMainStateMachine.ERROR;
			ELSE
				eMainState := eMainStateMachine.STARTUP;
			END_IF
		END_IF
		
	2: //Levitation Disabled
		IF fbServiceModule.eCondition = eConditionCheck.RUN AND fbGuidanceSystem.eCondition = eConditionCheck.RUN THEN
			fbErrorTimer(IN := FALSE);
			eMainState := eMainStateMachine.READY;
		ELSE
			fbErrorTimer(IN := TRUE);
			IF fbErrorTimer.Q THEN
				bStartUpError := TRUE;
				fbErrorTimer(IN := FALSE);
				eMainState := eMainStateMachine.ERROR;
			ELSE
				eMainState := eMainStateMachine.STARTUP;
			END_IF
		END_IF

	4: //Guidance Disabled	
		IF fbServiceModule.eCondition = eConditionCheck.RUN AND fbLevitationSystem.eCondition = eConditionCheck.RUN THEN
			fbErrorTimer(IN := FALSE);
			eMainState := eMainStateMachine.READY;
		ELSE
			fbErrorTimer(IN := TRUE);
			IF fbErrorTimer.Q THEN
				bStartUpError := TRUE;
				fbErrorTimer(IN := FALSE);
				eMainState := eMainStateMachine.ERROR;
			ELSE
				eMainState := eMainStateMachine.STARTUP;
			END_IF
		END_IF
		
	3: //ServiceModule and Levitation Disabled
		IF fbGuidanceSystem.eCondition = eConditionCheck.RUN THEN
			fbErrorTimer(IN := FALSE);
			eMainState := eMainStateMachine.READY;
		ELSE
			fbErrorTimer(IN := TRUE);
			IF fbErrorTimer.Q THEN
				bStartUpError := TRUE;
				fbErrorTimer(IN := FALSE);
				eMainState := eMainStateMachine.ERROR;
			ELSE
				eMainState := eMainStateMachine.STARTUP;
			END_IF
		END_IF
		
	5: //ServiceModule and Guidance Disabled
		IF fbLevitationSystem.eCondition = eConditionCheck.RUN THEN
			fbErrorTimer(IN := FALSE);
			eMainState := eMainStateMachine.READY;
		ELSE
			fbErrorTimer(IN := TRUE);
			IF fbErrorTimer.Q THEN
				bStartUpError := TRUE;
				fbErrorTimer(IN := FALSE);
				eMainState := eMainStateMachine.ERROR;
			ELSE
				eMainState := eMainStateMachine.STARTUP;
			END_IF
		END_IF
		
	6: //Levitation and Guidance Disabled
		IF fbServiceModule.eCondition = eConditionCheck.RUN THEN
			fbErrorTimer(IN := FALSE);
			eMainState := eMainStateMachine.READY;
		ELSE
			fbErrorTimer(IN := TRUE);
			IF fbErrorTimer.Q THEN
				bStartUpError := TRUE;
				fbErrorTimer(IN := FALSE);
				eMainState := eMainStateMachine.ERROR;
			ELSE
				eMainState := eMainStateMachine.STARTUP;
			END_IF
		END_IF
		
	7: //All Disabled
		fbErrorTimer(IN := TRUE);
		IF fbErrorTimer.Q THEN
			bStartUpError := TRUE;
			fbErrorTimer(IN := FALSE);
			eMainState := eMainStateMachine.ERROR;
		ELSE
			eMainState := eMainStateMachine.STARTUP;
		END_IF
END_CASE








		

]]></ST>
      </Implementation>
    </Method>
    <Method Name="doDataHandling" Id="{6650b2a5-53d2-4d59-90c1-16aa8c80f746}">
      <Declaration><![CDATA[METHOD PRIVATE doDataHandling
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="doEnableSubsystems" Id="{4402bbf9-07a3-41dd-916a-44a19b1d489b}">
      <Declaration><![CDATA[METHOD doEnableSubsystems
VAR_INPUT
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[nMode.0 := stFromOperationControlToMainControl.OM_origO_ServiceModuleDisabled;
nMode.1 := stFromOperationControlToMainControl.OM_origO_LevitationDisable;
nMode.2 := stFromOperationControlToMainControl.OM_origO_GuidanceDisable;
]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="MainControl">
      <LineId Id="402" Count="63" />
      <LineId Id="213" Count="0" />
    </LineIds>
    <LineIds Name="MainControl.doActivateHighLevelSTM">
      <LineId Id="27" Count="0" />
      <LineId Id="8" Count="1" />
      <LineId Id="11" Count="15" />
      <LineId Id="10" Count="0" />
    </LineIds>
    <LineIds Name="MainControl.doCallSubsystems">
      <LineId Id="7" Count="19" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="MainControl.doCheckSystem">
      <LineId Id="72" Count="0" />
      <LineId Id="92" Count="0" />
      <LineId Id="101" Count="11" />
      <LineId Id="100" Count="0" />
      <LineId Id="113" Count="1" />
      <LineId Id="116" Count="1" />
      <LineId Id="224" Count="0" />
      <LineId Id="118" Count="9" />
      <LineId Id="115" Count="0" />
      <LineId Id="131" Count="13" />
      <LineId Id="128" Count="0" />
      <LineId Id="146" Count="0" />
      <LineId Id="145" Count="0" />
      <LineId Id="147" Count="11" />
      <LineId Id="129" Count="0" />
      <LineId Id="159" Count="13" />
      <LineId Id="130" Count="0" />
      <LineId Id="176" Count="1" />
      <LineId Id="179" Count="11" />
      <LineId Id="178" Count="0" />
      <LineId Id="191" Count="13" />
      <LineId Id="174" Count="0" />
      <LineId Id="205" Count="1" />
      <LineId Id="211" Count="7" />
      <LineId Id="93" Count="0" />
      <LineId Id="73" Count="3" />
      <LineId Id="32" Count="0" />
      <LineId Id="68" Count="1" />
      <LineId Id="67" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="MainControl.doDataHandling">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="MainControl.doEnableSubsystems">
      <LineId Id="6" Count="1" />
      <LineId Id="5" Count="0" />
      <LineId Id="10" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>